Labor attendance response getting from mobile app

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.8",
-        "yajra/laravel-datatables-oracle": "^9.3"
+        "yajra/laravel-datatables-oracle": "^9.3",
+      "ext-json": "*"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
