--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,14 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "ext-json": "*",
+        "barryvdh/laravel-dompdf": "^0.8.4",
         "fideloper/proxy": "^4.0",
         "jeroennoten/laravel-adminlte": "^1.25",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.8",
-        "yajra/laravel-datatables-oracle": "^9.3",
-      "ext-json": "*"
+        "yajra/laravel-datatables-oracle": "^9.3"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
