--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,13 @@
         "php": "^7.1.3",
         "ext-json": "*",
         "barryvdh/laravel-dompdf": "^0.8.4",
+        "consoletvs/charts": "5.*",
         "fideloper/proxy": "^4.0",
         "jeroennoten/laravel-adminlte": "^1.25",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.8",
+        "spatie/laravel-searchable": "^1.2",
         "yajra/laravel-datatables-oracle": "^9.3"
     },
     "require-dev": {
